--- a/antet.html
+++ b/antet.html
@@ -9,7 +9,7 @@
 <table border="2">
 <tr>
 <td><a href="adresa1.html" target="continut"><img src="monitor.jpg" height="70"></a></td>
-<td><a href="adresa2.html" target="continut"><img src="bazaa.jpg" height="70"></a></td>
+<td><a href="adresa2.html" target="continut"><img src="bazaa.JPG" height="70"></a></td>
 <td><a href="adresa3.html" target="continut"><img src="dvd.jpg" height="70"></a></td>
 <td><a href="adresa4.html" target="continut"><img src="placavideo.jpg" height="70"></a></td>
 <td><a href="adresa5.html" target="continut"><img src="boxe.jpg" height="70"></a></td>
